--- a/style.css
+++ b/style.css
@@ -2,12 +2,15 @@ body {
     margin: 0px;
     padding-top: 800px;
     text-align: center;
+    background-color: aquamarine
+    
     
 }
 .profile_picture{
     width: 250px;
     border-radius: 50%;
-    margin-bottom: 65px
+    margin-bottom: 65px;
+    margin-top:80px;
 }
 #home {
     position:absolute;
@@ -16,12 +19,12 @@ body {
     left:0px;
     top:0px;
     bottom:0px;
-    right:0px;
-    background: linear-gradient(purple 0%,aqua 60%, orange 100%); 
+    right:0px; 
     display: table;
     width:100%;
     height:100%; 
-    z-index: 1
+    z-index: 1;
+    background: linear-gradient(purple 0%, aqua 60%, orange 100%);
 }
 .maindiv{
  display: table-cell;
@@ -32,10 +35,10 @@ body {
     
 }
 h1 {
-    font-family: 'Inconsolata', monospace;
+    font-family: 'Pacifico', cursive;
 }
 h2 {
-    font-family: 'Inconsolata', monospace;
+    font-family: 'Lobster', cursive;
 }
 .line {
     height: 6px;
@@ -47,7 +50,7 @@ p {
  max-width: 450px;
  margin:25px auto;
     line-height: 1.5;
-        font-size:17px; 
+        font-size:20px; 
 }
 .menu {
     list-style: none;
@@ -56,7 +59,6 @@ p {
     right:30px;
     z-index: 10;
     cursor:pointer;
-    text-decoration-color: chartreuse;
 }
 .link {
     float:left;
@@ -64,7 +66,7 @@ p {
     padding-right: 9px;
     padding-top: 5px;
     padding-top: 5px;
-    color:purple;
+    color:aqua;
     font-size:20px;
 }
 .link:hover{
@@ -73,3 +75,7 @@ p {
     color:darkblue;
     font-weight:bold;
 }
+html {
+    scroll-behavior: smooth;
+}
+
